--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Build Status](https://dev.azure.com/onivim/oni2/_apis/build/status/onivim.esy-onigurama?branchName=master)](https://dev.azure.com/onivim/oni2/_build/latest?definitionId=9&branchName=master)
+
 README  2007/05/31
 
 Oniguruma  ----   (C) K.Kosako <sndgk393 AT ybb DOT ne DOT jp>
